# fibbot

./: Cargo.toml  Dockerfile  action.yml
.github/workflows/: fibbot-action.yml
src/: extract_numbers.rs  fibonacci.rs  get_pull_request.rs  main.rs  post_comment.rs  post_comment_to_github.rs
tests/: extract_test.rs  fibonacci_test.rs  mod.rs
