[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
octocrab = "0.18"

[[bin]]
name = "fibbot"
path = "src/main.rs"